--- a/Makefile.decl
+++ b/Makefile.decl
@@ -22,6 +22,13 @@ QSTDERR = $(Q:@=2>/dev/null)
 AM_CFLAGS = -D_BIRNET_SOURCE_EXTENSIONS
 AM_CXXFLAGS = -D_BIRNET_SOURCE_EXTENSIONS
 
+# == download ==
+# recursive rule supported by all Makefiles to download files hosted online
+.PHONY: download download-recursive download-local
+download: download-local download-recursive
+download-recursive:
+	$(Q) for subdir in $(SUBDIRS) ; do test "$$subdir" = '.' || $(MAKE) -C "$$subdir" $(AM_MAKEFLAGS) download || exit $$? ; done
+
 # === distfile-list ===
 # recursive rule supported by all Makefiles to generate a list of all files
 # listed as DISTFILES. this asserts a writable file named $DISTFILE_LIST.
