TESTS: link against RAPICORN_LIBS

--- a/tests/latency/Makefile.am
+++ b/tests/latency/Makefile.am
@@ -20,7 +20,7 @@ BSESCM    = $(top_builddir)/shell/bsescm-$(BIN_VERSION)
 # bselatencytest:
 bselatencytest_la_SOURCES = bselatencytest.cc
 bselatencytest_la_LDFLAGS = -module -avoid-version
-bselatencytest_la_LIBADD  = $(top_builddir)/bse/libbse.la $(BSE_LIBS) -lm
+bselatencytest_la_LIBADD  = $(top_builddir)/bse/libbse.la $(RAPICORN_LIBS) $(BSE_LIBS) -lm
 EXTRA_HEADERS += bselatencytest.idl
 $(srcdir)/bselatencytest.cc: bselatencytest.idl
 $(srcdir)/bselatencytest.cc: bselatencytest.genidl.hh
