BSE, SFI, BST, TESTS: fixup init functions, use Rapicorn test macros

--- a/tests/bse/Makefile.am
+++ b/tests/bse/Makefile.am
@@ -46,7 +46,7 @@ generated: clean-generated $(GENERATED)
 # test programs
 #
 noinst_PROGRAMS = $(ALLTESTS)
-progs_ldadd = $(top_builddir)/bse/libbse.la $(BSE_LIBS)
+progs_ldadd = $(top_builddir)/bse/libbse.la $(RAPICORN_LIBS) $(BSE_LIBS)
 
 SLOWTESTS         += cxxbinding
 cxxbinding_SOURCES = cxxbinding.cc bsecxxapi.cc
