BIRNET, BUILD: remove birnet-zintern and use rapicorn-zintern

--- a/beast-gtk/dialogs/Makefile.am
+++ b/beast-gtk/dialogs/Makefile.am
@@ -1,6 +1,8 @@
 # BEAST - Better Audio System
 include $(top_srcdir)/Makefile.decl
 
+ZINTERN      = rapicorn-zintern
+
 ZFILE_DEFS = $(strip \
 	bst-radgets-standard	$(srcdir)/radgets-standard.xml	\
 	bst-radgets-beast	$(srcdir)/radgets-beast.xml	\
@@ -8,11 +10,10 @@ ZFILE_DEFS = $(strip \
 XML_FILES  = $(filter-out bst-%, $(ZFILE_DEFS))
 EXTRA_DIST += $(XML_FILES)
 
-ZINTERN=$(top_builddir)/birnet/birnet-zintern
 
 XMLLINTCALL=$(if $(XMLLINT),$(XMLLINT),true) # handle undefined XMLLINT
 
-beast-xml-zfiles.cc: $(XML_FILES) $(ZINTERN)
+beast-xml-zfiles.cc: $(XML_FILES)
 	cd .						\
 	&& $(XMLLINTCALL) --noout $(XML_FILES)		\
 	&& $(ZINTERN) -b -z $(ZFILE_DEFS) > xgen-bxc	\
