SFI: replace g_intern_printf with g_intern_format()

--- a/drivers/Makefile.am
+++ b/drivers/Makefile.am
@@ -9,7 +9,7 @@ AM_CXXFLAGS  = $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
 driversdir          = $(bsedriverdir)
 drivers_LTLIBRARIES = bsepcmdevice-alsa.la bsemididevice-alsa.la
 drivers_ldflags     = -avoid-version
-drivers_libs        = $(top_builddir)/bse/libbse.la $(BSE_LIBS)
+drivers_libs        = $(top_builddir)/bse/libbse.la $(BSE_LIBS) $(SFI_LIBS) $(RAPICORN_LIBS)
 EXTRA_DIST=
 
 # Plugin bsepcmdevice-alsa
