DOCS: merge Doxygen rules from dev/

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -3,6 +3,53 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = imports images
 
+QPRINT = @printf '  %-7s%s\n'
+
+# Describe source tree version (release tag relative, e.g. yy.mm.z-nnn-gHEXHEX)
+DSC_VERSION = $(shell git describe --always --match '[0-9]*' HEAD 2>/dev/null)
+# Release version, shows last tag reachable
+REL_VERSION = $(shell git describe --always --abbrev=0 HEAD 2>/dev/null)
+# Project version as configured
+PRJ_VERSION = $(shell sed -ne "/^[ \t]*VERSION[ \t]*=/ { s/^[^=]*=[ \t]*//; p; q }" < $(top_srcdir)/Makefile)
+# Detailed documentation version
+DOC_VERSION = $(or $(DSC_VERSION), $(PRJ_VERSION))
+
+# == html/ build rules ==
+include Makefile.doxygen
+
+# == Doxygen Build Rules ==
+HTMLMAN_FILES     	= imports/beast.1.html imports/bse.5.html imports/bsescm.1.html imports/bsewavetool.1.html imports/sfidl.1.html
+DOXYGEN_DOC_FILES	= docs/main.dox
+DOXYGEN_DOC_DIRS	= sfi/ bse/ plugins/ plugins/freeverb/ beast-gtk/ beast-gtk/gxk/ launchers/ shell/ tools/
+DOXYGEN_EXCLUDES	= rope/cpy2rope.cc rope/cxx-client.[hc][hc] rcore/signalvariants.hh
+DOXYGEN_CHANGELOG       = ChangeLog.tmp
+DOXYGEN_CHANGELOG_TITLE	= "Beast Development ChangeLog"
+DOXYGEN_PROJECT_LINK    = http://beast.testbit.eu/
+DOXYGEN_TAGFILES        = imports/tagfile-rapicorn.xml=http://dev.testbit.eu/rapicorn/latest/ \
+			  imports/tagfile-susv4.xml=http://pubs.opengroup.org/onlinepubs/9699919799/
+build-docs: doxygen-check
+	$(Q) $(MAKE) $(AM_MAKEFLAGS) --no-print-directory doxygen-clean
+	$(QPRINT) "GEN" "Git ChangeLog"
+	$(Q) $(GIT_CHANGELOG) > $(DOXYGEN_CHANGELOG)
+	$(Q) $(MAKE) $(AM_MAKEFLAGS) --no-print-directory doxygen-srctree
+	$(Q) rm -f $(DOXYGEN_CHANGELOG)
+	$(QPRINT) "GEN" "docs/docextract.dox"
+	$(Q) cd doxygen-srctree && \
+	  find . -type f -name \*[hcHC] -print | \
+	  $(PYTHON) $(abs_srcdir)/docextract.py > docs/docextract.dox
+	$(Q) $(MAKE) $(AM_MAKEFLAGS) --no-print-directory doxygen-html
+	$(QPRINT) "GEN" "HTML manual pages..."
+	$(Q) cp $(HTMLMAN_FILES) doxygen-html/
+	$(QPRINT) "MOVE" "HTML Documentation..."
+	$(Q) ! test -e $(DOC_TARGET) || { echo "$@: target directory exists already: $(DOC_TARGET)"; exit 1; }
+	$(Q) mv doxygen-html $(DOC_TARGET)
+	$(Q) $(MAKE) $(AM_MAKEFLAGS) --no-print-directory doxygen-clean
+.PHONY: build-docs
+CLEANFILES = $(DOXYGEN_CHANGELOG)
+GIT_CHANGELOG = ( git log --first-parent --date=short --pretty='%ad  %an 	\# %h%n%n%s%n%n%b' --abbrev=11 \
+		  ce584d04999a7fb9393e1cfedde2048ba73e8878..HEAD \
+		| sed 's/^/	/; s/^	//; /^[ 	]*<unknown>$$/d' )
+
 # == Misc Distribution Files ==
 EXTRA_DIST += $(strip		\
 	bse-categories.txt	\
