DOCS: add html-docs rule to build docs on demand

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -16,6 +16,21 @@ DOC_VERSION = $(or $(DSC_VERSION), $(PRJ_VERSION))
 
 # == html/ build rules ==
 include Makefile.doxygen
+git_index_file = $(shell test ! -x $(top_srcdir)/.git/ || echo $(top_srcdir)/.git/index)
+html/doc-version: @INGIT@ $(git_index_file)	# conditionally rebuild, depending on HEAD changes
+	$(AM_V_GEN)
+	$(Q) test -e $@ && test "`cat $@`" = "$(DOC_VERSION)" \
+	|| $(MAKE) $(AM_MAKEFLAGS) --no-print-directory html-docs
+	$(Q) rm -f $@ && echo "$(DOC_VERSION)" > $@
+clean-html-docs:
+	rm -rf html/
+clean-local: @INGIT@ clean-html-docs doxygen-clean
+EXTRA_DIST += html
+html-docs: doxygen-check
+	$(Q) rm -rf html/
+	$(Q) $(MAKE) $(AM_MAKEFLAGS) --no-print-directory build-docs DOXYGEN_GRAPHICS=NO DOC_TARGET=html
+	$(Q) echo "$(DOC_VERSION)" > html/doc-version
+.PHONY: html-docs
 
 # == Doxygen Build Rules ==
 HTMLMAN_FILES     	= imports/beast.1.html imports/bse.5.html imports/bsescm.1.html imports/bsewavetool.1.html imports/sfidl.1.html
