DOCS: images: don't ship unused images

--- a/docs/images/Makefile.am
+++ b/docs/images/Makefile.am
@@ -3,19 +3,9 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = # none
 
-dist_images = $(strip		\
-	module-voices.png	\
-	beast-components.png	\
-	beast-progs.png		\
-)
+SVG_FILES = beast-components.svg  beast-progs.svg  module-voices.svg
 
-dist_dias = $(strip		\
-	beast-components.dia	\
-	beast-progs.dia		\
-	module-voices.dia	\
-)
-
-docimages_DATA = ${dist_images}
-docimagesdir = ${beastimagesdir}
-
-EXTRA_DIST += $(dist_images) $(dist_dias)
+# PNG_FILES = beast-components.png  beast-progs.png  module-voices.png
+# docimages_DATA = $(PNG_FILES)
+# docimagesdir = $(beastimagesdir)
+# EXTRA_DIST += $(PNG_FILES)
